build: Fix tests not being run